new game added to the list: "Tibia"

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
                             <img src="https://static-cdn.jtvnw.net/ttv-boxart/18526_IGDB-90x120.jpg" alt="Imagem do jogo TESIV">
                         </a>
                     </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.twitch.tv/directory/game/Tibia">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/19619_IGDB-90x120.jpg">
+                        </a>
+                    </li>
+
                 </ul>
             </div>
         </section>
