--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
                     <li>
                         <a 
                         target="_blank"
-                        href="https://www.twitch.tv/quinslerjhonny">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a6b1dc32-53da-4c00-88b4-b69316759af4-profile_image-150x150.png" alt="Foto da véa loka">
+                        href="https://www.twitch.tv/heycamiladofus">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/4114e553-2f56-419c-974f-ee762dbe274c-profile_image-70x70.png" alt="Camila Nutri">
                         </a>
                     </li>
 
                     <li>
                         <a 
                         target="_blank"
-                        href="https://www.twitch.tv/quinslerjhonny">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a6b1dc32-53da-4c00-88b4-b69316759af4-profile_image-150x150.png" alt="Foto da véa loka">
+                        href="https://www.twitch.tv/cateroide">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/ff0eeff4-36d8-4202-9636-1067efbba74d-profile_image-150x150.png" alt="Cateroid.">
                         </a>
                     </li>
                 </ul>
