Added more games and streamers!

--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
                     <li>
                         <a 
                         target="_blank"
+                        href="https://www.twitch.tv/directory/category/the-elder-scrolls-v-skyrim">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/30028_IGDB-144x192.jpg" alt="Skyrim">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.twitch.tv/directory/category/dark-souls">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/29433_IGDB-144x192.jpg" alt="DS">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.twitch.tv/directory/category/crash-bandicoot">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/6756_IGDB_pt-pt-144x192.jpg" alt="Crash Bandicoot">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
                         href="https://www.twitch.tv/directory/game/Tibia">
                             <img src="https://static-cdn.jtvnw.net/ttv-boxart/19619_IGDB-90x120.jpg">
                         </a>
@@ -71,6 +95,14 @@
                 <h2>Canais e Streamers</h2>
                 <p>Lista de canais e transmissões que não perco!</p>
                 <ul class="channel-list">
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.youtube.com/@joerogan">
+                            <img src="https://yt3.googleusercontent.com/ytc/AOPolaTYBgg3ciyY0Q-3igHueczNyBNcFf66DrRdnVIzcQ=s176-c-k-c0x00ffffff-no-rj-mo" alt="JRE">
+                        </a>
+                    </li>
+
                     <li>
                         <a 
                         target="_blank"
@@ -94,6 +126,23 @@
                             <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/ff0eeff4-36d8-4202-9636-1067efbba74d-profile_image-150x150.png" alt="Cateroid.">
                         </a>
                     </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.youtube.com/@BrightInsight">
+                            <img src="https://yt3.googleusercontent.com/ytc/AOPolaT7vjw1hWg_PwL3jkSMp5hF7NSKUQdMbAVqJt3d2Q=s176-c-k-c0x00ffffff-no-rj-mo" alt="Jimmy">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.youtube.com/@brienfoerster">
+                            <img src="https://yt3.googleusercontent.com/ytc/AOPolaQFAbbeLB9EVhyMG32m_0fMWF2yePOCgH61hwYhBQ=s176-c-k-c0x00ffffff-no-rj-mo" alt="Brien Foerster">
+                        </a>
+                    </li>
+
                 </ul>
             </div>
         </section>
